tests/parser/nested_functions/invalid_02.m.out
In invalid_02.m, line 4
|   potato
|   ^^^^^^ style: end statement with a semicolon [end_of_statements]
In invalid_02.m, line 3
| function invalid_02
| ^^^^^^^^ error: this function must be terminated with end
MISS_HIT Debug Summary: 1 file(s) analysed, 1 style issue(s), 1 error(s)
